--- a/index.html
+++ b/index.html
@@ -1,2 +1,323 @@
 
-<h1>Hello</h1>
+<h1>9 club</h1>
+
+Sparks are customized Twitch Reward Points.
+
+Subscribers get more points, Tier 1 = 1.2x, Tier 2 = 1.4x and Tier 3 = 2x.
+
+Redeem HARD, NIGHTMARE & GODLIKE in chat.
+
+List shows who and when they were redeemed (British Date Format).
+
+Anyone list NIGHTMARE or above will get a limited edition VIP badge in chat.
+
+Hitting GODLIKE is almost impossible, but if you do, epicness is coming.
+
+All dates shown are in British Date Format
+
+|| GODLIKE || (9,999,999 sparks)
+
+Nobody has achieved GODLIKE
+
+|| NIGHTMARE || (999,999 sparks)
+
+Only 6 have conquered NIGHTMARE
+
+itWazzMe
+28.04.21
+
+ellipsisRIP
+26.07.21
+
+Cat_Bacon_624
+07.02.22
+
+norespnse
+30.06.22
+
+TinkerbellHook
+03.03.23
+
+SilxxUK
+16.04.25
+
+|| HARD MODE || (99,999 sparks)
+
+85 have battled HARD
+
+HOFFIN_
+30.07.20|28.08.20|19.09.20|05.10.20
+24.10.20|11.11.20|02.12.20|25.12.20
+15.01.21|08.02.21|08.03.21|27.03.21
+28.04.21|25.05.21|28.06.21|27.07.21
+15.08.21|12.09.21|20.12.21|04.02.22
+07.06.22|22.06.23|22.06.23|22.06.23
+22.06.23|22.06.23|21.01.24
+
+B_happy420
+30.7.20|22.06.23
+
+DSIS_dark
+31.7.20
+
+Shastow
+05.8.20|07.09.20|30.09.20|23.11.20
+
+Cat_Bacon_624
+16.08.20|02.10.20
+
+SilxxUK
+23.08.20
+
+l0z44
+27.08.20
+
+El_Randinio
+29.08.20
+
+AmmoDash
+08.09.20
+
+Redline13
+10.09.20
+
+skulduggery00
+12.09.20|10.08.23
+
+mataja_777
+12.09.20
+
+JUSTCLAlRE
+14.09.20|16.11.20|16.11.20|10.02.21
+11.07.21|08.12.21|06.08.22
+
+RetroZoon
+25.09.20|27.05.21|08.01.21|20.01.22|15.02.23|09.05.25
+
+oumarch110
+29.09.20
+
+Caglee
+01.10.20
+
+LanceABoyle
+03.10.20
+
+drollcow
+07.10.20|17.12.20|03.03.21|08.05.21
+01.09.21
+
+schakken
+07.10.20|25.01.21|28.05.21|22.06.23
+
+DarkStarWolfy 
+09.10.20|14.12.20|31.03.21|15.08.21
+
+blunkadunk
+10.10.20|16.12.20|24.02.21|01.04.21
+18.05.21|15.07.21|14.08.21|23.09.21
+04.02.22|22.06.23|08.02.25|07.03.25
+02.06.25
+
+BentyBird
+10.10.20
+
+Lew_chew
+18.10.20
+
+Tejey94
+18.10.20|30.12.20|29.03.21|25.09.21|25.07.22|06.03.23|01.03.25
+
+MekaCandyKS
+01.11.20
+
+bigboychris46
+04.11.20
+
+humbertiger
+09.11.20|25.08.21
+
+MooseyGeek
+10.11.20
+
+sgtb1lk0
+13.11.20
+
+doggyfood
+20.11.20|14.07.21|05.08.22|14.03.24
+
+jcarmichael1966
+23.11.20|18.02.21|11.06.21|22.01.22
+
+Hawkeye4124
+23.11.20|07.06.22|07.06.22
+
+miss_eloisa
+27.11.20|22.06.23
+
+justfeezy
+10.12.20|13.03.25
+
+stevenxkalel13
+11.12.20
+
+mordechai666
+25.12.20|11.06.21|03.09.21|13.08.22
+
+KurTech
+29.12.20|01.04.21|05.08.21|07.06.22|30.01.24|13.03.25
+
+Lawgiver061105
+30.12.20|07.06.22|07.06.22|14.02.23
+
+reggie_84
+01.01.21|05.03.21|05.08.21
+
+JackDaniels54
+05.01.21
+
+JasonBryant
+08.01.21
+
+MrsSpontaneous
+08.01.21|24.10.21
+
+reality_v
+11.01.21|29.06.21|21.01.22
+
+Laney1986sam
+21.01.21|28.05.21|23.09.21|05.02.24
+
+bigbuddha23x
+22.01.21|05.08.21 
+
+8t8iroc
+27.01.21
+
+KenWho_
+08.02.21|09.02.21|15.08.22
+
+Becaruu
+10.02.21|20.08.22
+
+LeahJane_
+11.02.21
+
+JimmehDanger
+01.03.21|25.08.21|14.06.22|26.10.22
+
+MultiverseNomad
+08.03.21|15.11.21
+
+go4itpats12
+09.03.21|20.01.24
+
+Hunkstaban
+05.04.21
+
+Ripets
+20.04.21
+
+DeafDumbDrunk
+28.04.21|06.07.22
+
+QueDee
+03.05.21
+
+SeeEmHearEm
+18.05.21
+
+Scotta
+27.05.21
+
+RedHeadLady06
+28.05.21
+
+Ashaweeeee
+28.05.21
+
+carcanobie
+29.06.21
+
+Peebs_x
+05.08.21
+
+vampluv
+16.08.21
+
+SN4KEH1PS
+26.08.21
+
+ellipsisRIP
+28.08.21|12.01.22|07.06.22
+
+KoldFire7
+08.09.21|05.07.22
+
+jonny_longwood
+27.09.21
+
+Narusko
+24.10.21|14.09.22|14.09.22|14.09.22|22.06.23
+
+snappierriver58
+10.11.21|19.06.22|24.06.22|03.08.23
+
+Pongonator
+19.12.21
+
+YellowSnoflake
+21.12.21|21.12.21
+
+madison9
+12.01.22
+
+one1shot1wonder
+14.01.22|05.03.24
+
+TruckerMarty
+21.01.22|21.01.22
+
+lusterr72
+04.02.22
+
+daveyd182
+09.03.22|03.06.25
+
+eXilePro
+01.06.22
+
+minipaintpants
+07.06.22
+
+blizzb
+30.06.22
+
+ZoMohs
+05.07.22|08.02.25
+
+Prepperian
+01.08.22
+
+nullz4dayz
+17.08.22
+
+willisjnr777
+02.08.22
+
+Par3Par4Par5
+18.10.22
+
+norespnse
+07.02.23
+
+LordZachBora
+27.02.23
+
+ho_lee_chit_batman
+22.06.23
+
+OriginalVitamins
+13.02.25
+
+updated [14.06.25]
