--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <h1>9 club</h1>
 
-Sparks are customized Twitch Reward Points.
+<p>Sparks are customized Twitch Reward Points.
 
 Subscribers get more points, Tier 1 = 1.2x, Tier 2 = 1.4x and Tier 3 = 2x.
 
@@ -13,17 +13,17 @@ Anyone list NIGHTMARE or above will get a limited edition VIP badge in chat.
 
 Hitting GODLIKE is almost impossible, but if you do, epicness is coming.
 
-All dates shown are in British Date Format
+All dates shown are in British Date Format</p>
 
-|| GODLIKE || (9,999,999 sparks)
+|| GODLIKE || (9,999,999 sparks)<br>
 
-Nobody has achieved GODLIKE
+Nobody has achieved GODLIKE<br>
 
-|| NIGHTMARE || (999,999 sparks)
+|| NIGHTMARE || (999,999 sparks)<br>
 
-Only 6 have conquered NIGHTMARE
+Only 6 have conquered NIGHTMARE<br>
 
-itWazzMe
+itWazzMe<br>
 28.04.21
 
 ellipsisRIP
