--- a/index.html
+++ b/index.html
@@ -23,301 +23,301 @@ Nobody has achieved GODLIKE<br>
 
 Only 6 have conquered NIGHTMARE<br>
 
-itWazzMe<br>
-28.04.21
+<p>itWazzMe
+28.04.21</p>
 
-ellipsisRIP
-26.07.21
+<p>ellipsisRIP
+26.07.21</p>
 
-Cat_Bacon_624
-07.02.22
+<p>Cat_Bacon_624
+07.02.22</p>
 
-norespnse
-30.06.22
+<p>norespnse
+30.06.22</p>
 
-TinkerbellHook
-03.03.23
+<p>TinkerbellHook
+03.03.23</p>
 
-SilxxUK
-16.04.25
+<p>SilxxUK
+16.04.25</p>
 
-|| HARD MODE || (99,999 sparks)
+<p>|| HARD MODE || (99,999 sparks)</p>
 
-85 have battled HARD
+<p>85 have battled HARD</p>
 
-HOFFIN_
+<p>HOFFIN_
 30.07.20|28.08.20|19.09.20|05.10.20
 24.10.20|11.11.20|02.12.20|25.12.20
 15.01.21|08.02.21|08.03.21|27.03.21
 28.04.21|25.05.21|28.06.21|27.07.21
 15.08.21|12.09.21|20.12.21|04.02.22
 07.06.22|22.06.23|22.06.23|22.06.23
-22.06.23|22.06.23|21.01.24
+22.06.23|22.06.23|21.01.24</p>
 
-B_happy420
-30.7.20|22.06.23
+<p>B_happy420
+30.7.20|22.06.23</p>
 
-DSIS_dark
-31.7.20
+<p>DSIS_dark
+31.7.20</p>
 
-Shastow
-05.8.20|07.09.20|30.09.20|23.11.20
+<p>Shastow
+05.8.20|07.09.20|30.09.20|23.11.20</p>
 
-Cat_Bacon_624
-16.08.20|02.10.20
+<p>Cat_Bacon_624
+16.08.20|02.10.20</p>
 
-SilxxUK
-23.08.20
+<p>SilxxUK
+23.08.20</p>
 
-l0z44
-27.08.20
+<p>l0z44
+27.08.20</p>
 
-El_Randinio
-29.08.20
+<p>El_Randinio
+29.08.20</p>
 
-AmmoDash
-08.09.20
+<p>AmmoDash
+08.09.20</p>
 
-Redline13
-10.09.20
+<p>Redline13
+10.09.20</p>
 
-skulduggery00
-12.09.20|10.08.23
+<p>skulduggery00
+12.09.20|10.08.23</p>
 
-mataja_777
-12.09.20
+<p>mataja_777
+12.09.20</p>
 
-JUSTCLAlRE
+<p>JUSTCLAlRE
 14.09.20|16.11.20|16.11.20|10.02.21
-11.07.21|08.12.21|06.08.22
+11.07.21|08.12.21|06.08.22</p>
 
-RetroZoon
-25.09.20|27.05.21|08.01.21|20.01.22|15.02.23|09.05.25
+<p>RetroZoon
+25.09.20|27.05.21|08.01.21|20.01.22|15.02.23|09.05.25</p>
 
-oumarch110
-29.09.20
+<p>oumarch110
+29.09.20</p>
 
-Caglee
-01.10.20
+<p>Caglee
+01.10.20</p>
 
-LanceABoyle
-03.10.20
+<p>LanceABoyle
+03.10.20</p>
 
-drollcow
+<p>drollcow
 07.10.20|17.12.20|03.03.21|08.05.21
-01.09.21
+01.09.21</p>
 
-schakken
-07.10.20|25.01.21|28.05.21|22.06.23
+<p>schakken
+07.10.20|25.01.21|28.05.21|22.06.23</p>
 
-DarkStarWolfy 
-09.10.20|14.12.20|31.03.21|15.08.21
+<p>DarkStarWolfy 
+09.10.20|14.12.20|31.03.21|15.08.21</p>
 
-blunkadunk
+<p>blunkadunk
 10.10.20|16.12.20|24.02.21|01.04.21
 18.05.21|15.07.21|14.08.21|23.09.21
 04.02.22|22.06.23|08.02.25|07.03.25
-02.06.25
+02.06.25</p>
 
-BentyBird
-10.10.20
+<p>BentyBird
+10.10.20</p>
 
-Lew_chew
-18.10.20
+<p>Lew_chew
+18.10.20</p>
 
-Tejey94
-18.10.20|30.12.20|29.03.21|25.09.21|25.07.22|06.03.23|01.03.25
+<p>Tejey94
+18.10.20|30.12.20|29.03.21|25.09.21|25.07.22|06.03.23|01.03.25</p>
 
-MekaCandyKS
-01.11.20
+<p>MekaCandyKS
+01.11.20</p>
 
-bigboychris46
-04.11.20
+<p>bigboychris46
+04.11.20</p>
 
-humbertiger
-09.11.20|25.08.21
+<p>humbertiger
+09.11.20|25.08.21</p>
 
-MooseyGeek
-10.11.20
+<p>MooseyGeek
+10.11.20</p>
 
-sgtb1lk0
-13.11.20
+<p>sgtb1lk0
+13.11.20</p>
 
-doggyfood
-20.11.20|14.07.21|05.08.22|14.03.24
+<p>doggyfood
+20.11.20|14.07.21|05.08.22|14.03.24</p>
 
-jcarmichael1966
-23.11.20|18.02.21|11.06.21|22.01.22
+<p>jcarmichael1966
+23.11.20|18.02.21|11.06.21|22.01.22</p>
 
-Hawkeye4124
-23.11.20|07.06.22|07.06.22
+<p>Hawkeye4124
+23.11.20|07.06.22|07.06.22</p>
 
-miss_eloisa
-27.11.20|22.06.23
+<p>miss_eloisa
+27.11.20|22.06.23</p>
 
-justfeezy
-10.12.20|13.03.25
+<p>justfeezy
+10.12.20|13.03.25</p>
 
-stevenxkalel13
-11.12.20
+<p>stevenxkalel13
+11.12.20</p>
 
-mordechai666
-25.12.20|11.06.21|03.09.21|13.08.22
+<p>mordechai666
+25.12.20|11.06.21|03.09.21|13.08.22</p>
 
-KurTech
-29.12.20|01.04.21|05.08.21|07.06.22|30.01.24|13.03.25
+<p>KurTech
+29.12.20|01.04.21|05.08.21|07.06.22|30.01.24|13.03.25</p>
 
-Lawgiver061105
-30.12.20|07.06.22|07.06.22|14.02.23
+<p>Lawgiver061105
+30.12.20|07.06.22|07.06.22|14.02.23</p>
 
-reggie_84
-01.01.21|05.03.21|05.08.21
+<p>reggie_84
+01.01.21|05.03.21|05.08.21</p>
 
-JackDaniels54
-05.01.21
+<p>JackDaniels54
+05.01.21</p>
 
-JasonBryant
-08.01.21
+<p>JasonBryant
+08.01.21</p>
 
-MrsSpontaneous
-08.01.21|24.10.21
+<p>MrsSpontaneous
+08.01.21|24.10.21</p>
 
-reality_v
-11.01.21|29.06.21|21.01.22
+<p>reality_v
+11.01.21|29.06.21|21.01.22</p>
 
-Laney1986sam
-21.01.21|28.05.21|23.09.21|05.02.24
+<p>Laney1986sam
+21.01.21|28.05.21|23.09.21|05.02.24</p>
 
-bigbuddha23x
-22.01.21|05.08.21 
+<p>bigbuddha23x
+22.01.21|05.08.21 </p>
 
-8t8iroc
-27.01.21
+<p>8t8iroc
+27.01.21</p>
 
-KenWho_
-08.02.21|09.02.21|15.08.22
+<p>KenWho_
+08.02.21|09.02.21|15.08.22</p>
 
-Becaruu
-10.02.21|20.08.22
+<p>Becaruu
+10.02.21|20.08.22</p>
 
-LeahJane_
-11.02.21
+<p>LeahJane_
+11.02.21</p>
 
-JimmehDanger
-01.03.21|25.08.21|14.06.22|26.10.22
+<p>JimmehDanger
+01.03.21|25.08.21|14.06.22|26.10.22</p>
 
-MultiverseNomad
-08.03.21|15.11.21
+<p>MultiverseNomad
+08.03.21|15.11.21</p>
 
-go4itpats12
-09.03.21|20.01.24
+<p>go4itpats12
+09.03.21|20.01.24</p>
 
-Hunkstaban
-05.04.21
+<p>Hunkstaban
+05.04.21</p>
 
-Ripets
-20.04.21
+<p>Ripets
+20.04.21</p>
 
-DeafDumbDrunk
-28.04.21|06.07.22
+<p>DeafDumbDrunk
+28.04.21|06.07.22</p>
 
-QueDee
-03.05.21
+<p>QueDee
+03.05.21</p>
 
-SeeEmHearEm
-18.05.21
+<p>SeeEmHearEm
+18.05.21</p>
 
-Scotta
-27.05.21
+<p>Scotta
+27.05.21</p>
 
-RedHeadLady06
-28.05.21
+<p>RedHeadLady06
+28.05.21</p>
 
-Ashaweeeee
-28.05.21
+<p>Ashaweeeee
+28.05.21</p>
 
-carcanobie
-29.06.21
+<p>carcanobie
+29.06.21</p>
 
-Peebs_x
-05.08.21
+<p>Peebs_x
+05.08.21</p>
 
-vampluv
-16.08.21
+<p>vampluv
+16.08.21</p>
 
-SN4KEH1PS
-26.08.21
+<p>SN4KEH1PS
+26.08.21</p>
 
-ellipsisRIP
-28.08.21|12.01.22|07.06.22
+<p>ellipsisRIP
+28.08.21|12.01.22|07.06.22</p>
 
-KoldFire7
-08.09.21|05.07.22
+<p>KoldFire7
+08.09.21|05.07.22</p>
 
-jonny_longwood
-27.09.21
+<p>jonny_longwood
+27.09.21</p>
 
-Narusko
-24.10.21|14.09.22|14.09.22|14.09.22|22.06.23
+<p>Narusko
+24.10.21|14.09.22|14.09.22|14.09.22|22.06.23</p>
 
-snappierriver58
-10.11.21|19.06.22|24.06.22|03.08.23
+<p>snappierriver58
+10.11.21|19.06.22|24.06.22|03.08.23</p>
 
-Pongonator
-19.12.21
+<p>Pongonator
+19.12.21</p>
 
-YellowSnoflake
-21.12.21|21.12.21
+<p>YellowSnoflake
+21.12.21|21.12.21</p>
 
-madison9
-12.01.22
+<p>madison9
+12.01.22</p>
 
-one1shot1wonder
-14.01.22|05.03.24
+<p>one1shot1wonder
+14.01.22|05.03.24</p>
 
-TruckerMarty
-21.01.22|21.01.22
+<p>TruckerMarty
+21.01.22|21.01.22</p>
 
-lusterr72
-04.02.22
+<p>lusterr72
+04.02.22</p>
 
-daveyd182
-09.03.22|03.06.25
+<p>daveyd182
+09.03.22|03.06.25</p>
 
-eXilePro
-01.06.22
+<p>eXilePro
+01.06.22</p>
 
-minipaintpants
-07.06.22
+<p>minipaintpants
+07.06.22</p>
 
-blizzb
-30.06.22
+<p>blizzb
+30.06.22</p>
 
-ZoMohs
-05.07.22|08.02.25
+<p>ZoMohs
+05.07.22|08.02.25</p>
 
-Prepperian
-01.08.22
+<p>Prepperian
+01.08.22</p>
 
-nullz4dayz
-17.08.22
+<p>nullz4dayz
+17.08.22</p>
 
-willisjnr777
-02.08.22
+<p>willisjnr777
+02.08.22</p>
 
-Par3Par4Par5
-18.10.22
+<p>Par3Par4Par5
+18.10.22</p>
 
-norespnse
-07.02.23
+<p>norespnse
+07.02.23</p>
 
-LordZachBora
-27.02.23
+<p>LordZachBora
+27.02.23</p>
 
-ho_lee_chit_batman
-22.06.23
+<p>ho_lee_chit_batman
+22.06.23</p>
 
-OriginalVitamins
-13.02.25
+<p>OriginalVitamins
+13.02.25</p>
 
-updated [14.06.25]
+<p>updated [14.06.25]</p>
