--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@ Nobody has achieved GODLIKE<br>
 
 Only 6 have conquered NIGHTMARE<br>
 
-<p>itWazzMe
+<p>itWazzMe<br>
 28.04.21</p>
 
-<p>ellipsisRIP
+<p>ellipsisRIP<br>
 26.07.21</p>
 
-<p>Cat_Bacon_624
+<p>Cat_Bacon_624<br>
 07.02.22</p>
 
-<p>norespnse
+<p>norespnse<br>
 30.06.22</p>
 
-<p>TinkerbellHook
+<p>TinkerbellHook<br>
 03.03.23</p>
 
-<p>SilxxUK
+<p>SilxxUK<br>
 16.04.25</p>
 
 <p>|| HARD MODE || (99,999 sparks)</p>
 
 <p>85 have battled HARD</p>
 
-<p>HOFFIN_
+<p>HOFFIN_<br>
 30.07.20|28.08.20|19.09.20|05.10.20
 24.10.20|11.11.20|02.12.20|25.12.20
 15.01.21|08.02.21|08.03.21|27.03.21
@@ -54,270 +54,270 @@ Only 6 have conquered NIGHTMARE<br>
 07.06.22|22.06.23|22.06.23|22.06.23
 22.06.23|22.06.23|21.01.24</p>
 
-<p>B_happy420
+<p>B_happy420<br>
 30.7.20|22.06.23</p>
 
-<p>DSIS_dark
+<p>DSIS_dark<br>
 31.7.20</p>
 
-<p>Shastow
+<p>Shastow<br>
 05.8.20|07.09.20|30.09.20|23.11.20</p>
 
-<p>Cat_Bacon_624
+<p>Cat_Bacon_624<br>
 16.08.20|02.10.20</p>
 
-<p>SilxxUK
+<p>SilxxUK<br>
 23.08.20</p>
 
-<p>l0z44
+<p>l0z44<br>
 27.08.20</p>
 
-<p>El_Randinio
+<p>El_Randinio<br>
 29.08.20</p>
 
-<p>AmmoDash
+<p>AmmoDash<br>
 08.09.20</p>
 
-<p>Redline13
+<p>Redline13<br>
 10.09.20</p>
 
-<p>skulduggery00
+<p>skulduggery00<br>
 12.09.20|10.08.23</p>
 
-<p>mataja_777
+<p>mataja_777<br>
 12.09.20</p>
 
-<p>JUSTCLAlRE
+<p>JUSTCLAlRE<br>
 14.09.20|16.11.20|16.11.20|10.02.21
 11.07.21|08.12.21|06.08.22</p>
 
-<p>RetroZoon
+<p>RetroZoon<br>
 25.09.20|27.05.21|08.01.21|20.01.22|15.02.23|09.05.25</p>
 
-<p>oumarch110
+<p>oumarch110<br>
 29.09.20</p>
 
-<p>Caglee
+<p>Caglee<br>
 01.10.20</p>
 
-<p>LanceABoyle
+<p>LanceABoyle<br>
 03.10.20</p>
 
-<p>drollcow
+<p>drollcow<br>
 07.10.20|17.12.20|03.03.21|08.05.21
 01.09.21</p>
 
-<p>schakken
+<p>schakken<br>
 07.10.20|25.01.21|28.05.21|22.06.23</p>
 
-<p>DarkStarWolfy 
+<p>DarkStarWolfy <br>
 09.10.20|14.12.20|31.03.21|15.08.21</p>
 
-<p>blunkadunk
+<p>blunkadunk<br>
 10.10.20|16.12.20|24.02.21|01.04.21
 18.05.21|15.07.21|14.08.21|23.09.21
 04.02.22|22.06.23|08.02.25|07.03.25
 02.06.25</p>
 
-<p>BentyBird
+<p>BentyBird<br>
 10.10.20</p>
 
-<p>Lew_chew
+<p>Lew_chew<br>
 18.10.20</p>
 
-<p>Tejey94
+<p>Tejey94<br>
 18.10.20|30.12.20|29.03.21|25.09.21|25.07.22|06.03.23|01.03.25</p>
 
-<p>MekaCandyKS
+<p>MekaCandyKS<br>
 01.11.20</p>
 
-<p>bigboychris46
+<p>bigboychris46<br>
 04.11.20</p>
 
-<p>humbertiger
+<p>humbertiger<br>
 09.11.20|25.08.21</p>
 
-<p>MooseyGeek
+<p>MooseyGeek<br>
 10.11.20</p>
 
-<p>sgtb1lk0
+<p>sgtb1lk0<br>
 13.11.20</p>
 
-<p>doggyfood
+<p>doggyfood<br>
 20.11.20|14.07.21|05.08.22|14.03.24</p>
 
-<p>jcarmichael1966
+<p>jcarmichael1966<br>
 23.11.20|18.02.21|11.06.21|22.01.22</p>
 
-<p>Hawkeye4124
+<p>Hawkeye4124<br>
 23.11.20|07.06.22|07.06.22</p>
 
-<p>miss_eloisa
+<p>miss_eloisa<br>
 27.11.20|22.06.23</p>
 
-<p>justfeezy
+<p>justfeezy<br>
 10.12.20|13.03.25</p>
 
-<p>stevenxkalel13
+<p>stevenxkalel13<br>
 11.12.20</p>
 
-<p>mordechai666
+<p>mordechai666<br>
 25.12.20|11.06.21|03.09.21|13.08.22</p>
 
-<p>KurTech
+<p>KurTech<br>
 29.12.20|01.04.21|05.08.21|07.06.22|30.01.24|13.03.25</p>
 
-<p>Lawgiver061105
+<p>Lawgiver061105<br>
 30.12.20|07.06.22|07.06.22|14.02.23</p>
 
-<p>reggie_84
+<p>reggie_84<br>
 01.01.21|05.03.21|05.08.21</p>
 
-<p>JackDaniels54
+<p>JackDaniels54<br>
 05.01.21</p>
 
-<p>JasonBryant
+<p>JasonBryant<br>
 08.01.21</p>
 
-<p>MrsSpontaneous
+<p>MrsSpontaneous<br>
 08.01.21|24.10.21</p>
 
-<p>reality_v
+<p>reality_v<br>
 11.01.21|29.06.21|21.01.22</p>
 
-<p>Laney1986sam
+<p>Laney1986sam<br>
 21.01.21|28.05.21|23.09.21|05.02.24</p>
 
-<p>bigbuddha23x
+<p>bigbuddha23x<br>
 22.01.21|05.08.21 </p>
 
-<p>8t8iroc
+<p>8t8iroc<br>
 27.01.21</p>
 
-<p>KenWho_
+<p>KenWho_<br>
 08.02.21|09.02.21|15.08.22</p>
 
-<p>Becaruu
+<p>Becaruu<br>
 10.02.21|20.08.22</p>
 
-<p>LeahJane_
+<p>LeahJane_<br>
 11.02.21</p>
 
-<p>JimmehDanger
+<p>JimmehDanger<br>
 01.03.21|25.08.21|14.06.22|26.10.22</p>
 
-<p>MultiverseNomad
+<p>MultiverseNomad<br>
 08.03.21|15.11.21</p>
 
-<p>go4itpats12
+<p>go4itpats12<br>
 09.03.21|20.01.24</p>
 
-<p>Hunkstaban
+<p>Hunkstaban<br>
 05.04.21</p>
 
-<p>Ripets
+<p>Ripets<br>
 20.04.21</p>
 
-<p>DeafDumbDrunk
+<p>DeafDumbDrunk<br>
 28.04.21|06.07.22</p>
 
-<p>QueDee
+<p>QueDee<br>
 03.05.21</p>
 
-<p>SeeEmHearEm
+<p>SeeEmHearEm<br>
 18.05.21</p>
 
-<p>Scotta
+<p>Scotta<br>
 27.05.21</p>
 
-<p>RedHeadLady06
+<p>RedHeadLady06<br>
 28.05.21</p>
 
-<p>Ashaweeeee
+<p>Ashaweeeee<br>
 28.05.21</p>
 
-<p>carcanobie
+<p>carcanobie<br>
 29.06.21</p>
 
-<p>Peebs_x
+<p>Peebs_x<br>
 05.08.21</p>
 
-<p>vampluv
+<p>vampluv<br>
 16.08.21</p>
 
-<p>SN4KEH1PS
+<p>SN4KEH1PS<br>
 26.08.21</p>
 
-<p>ellipsisRIP
+<p>ellipsisRIP<br>
 28.08.21|12.01.22|07.06.22</p>
 
-<p>KoldFire7
+<p>KoldFire7<br>
 08.09.21|05.07.22</p>
 
-<p>jonny_longwood
+<p>jonny_longwood<br>
 27.09.21</p>
 
-<p>Narusko
+<p>Narusko<br>
 24.10.21|14.09.22|14.09.22|14.09.22|22.06.23</p>
 
-<p>snappierriver58
+<p>snappierriver58<br>
 10.11.21|19.06.22|24.06.22|03.08.23</p>
 
-<p>Pongonator
+<p>Pongonator<br>
 19.12.21</p>
 
-<p>YellowSnoflake
+<p>YellowSnoflake<br>
 21.12.21|21.12.21</p>
 
-<p>madison9
+<p>madison9<br>
 12.01.22</p>
 
-<p>one1shot1wonder
+<p>one1shot1wonder<br>
 14.01.22|05.03.24</p>
 
-<p>TruckerMarty
+<p>TruckerMarty<br>
 21.01.22|21.01.22</p>
 
-<p>lusterr72
+<p>lusterr72<br>
 04.02.22</p>
 
-<p>daveyd182
+<p>daveyd182<br>
 09.03.22|03.06.25</p>
 
-<p>eXilePro
+<p>eXilePro<br>
 01.06.22</p>
 
-<p>minipaintpants
+<p>minipaintpants<br>
 07.06.22</p>
 
-<p>blizzb
+<p>blizzb<br>
 30.06.22</p>
 
-<p>ZoMohs
+<p>ZoMohs<br>
 05.07.22|08.02.25</p>
 
-<p>Prepperian
+<p>Prepperian<br>
 01.08.22</p>
 
-<p>nullz4dayz
+<p>nullz4dayz<br>
 17.08.22</p>
 
-<p>willisjnr777
+<p>willisjnr777<br>
 02.08.22</p>
 
-<p>Par3Par4Par5
+<p>Par3Par4Par5<br>
 18.10.22</p>
 
-<p>norespnse
+<p>norespnse<br>
 07.02.23</p>
 
-<p>LordZachBora
+<p>LordZachBora<br>
 27.02.23</p>
 
-<p>ho_lee_chit_batman
+<p>ho_lee_chit_batman<br>
 22.06.23</p>
 
-<p>OriginalVitamins
+<p>OriginalVitamins<br>
 13.02.25</p>
 
 <p>updated [14.06.25]</p>
