--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@ title: Home
 
 <h1>9 club</h1>
 
-<p>Sparks are customized Twitch Reward Points.
+<p>Sparks are customized Twitch Reward Points.<br>
 
-Subscribers get more points, Tier 1 = 1.2x, Tier 2 = 1.4x and Tier 3 = 2x.
+Subscribers get more points, Tier 1 = 1.2x, Tier 2 = 1.4x and Tier 3 = 2x.<br>
 
-Redeem HARD, NIGHTMARE & GODLIKE in chat.
+Redeem HARD, NIGHTMARE & GODLIKE in chat.<br>
 
-List shows who and when they were redeemed (British Date Format).
+List shows who and when they were redeemed (British Date Format).<br>
 
-Anyone list NIGHTMARE or above will get a limited edition VIP badge in chat.
+Anyone list NIGHTMARE or above will get a limited edition VIP badge in chat.<br>
 
-Hitting GODLIKE is almost impossible, but if you do, epicness is coming.
+Hitting GODLIKE is almost impossible, but if you do, epicness is coming.<br>
 
 All dates shown are in British Date Format</p>
 
@@ -51,25 +51,25 @@ Only 6 have conquered NIGHTMARE<br>
 <p>85 have battled HARD</p>
 
 <p>HOFFIN_<br>
-30.07.20|28.08.20|19.09.20|05.10.20
-24.10.20|11.11.20|02.12.20|25.12.20
-15.01.21|08.02.21|08.03.21|27.03.21
-28.04.21|25.05.21|28.06.21|27.07.21
-15.08.21|12.09.21|20.12.21|04.02.22
-07.06.22|22.06.23|22.06.23|22.06.23
-22.06.23|22.06.23|21.01.24</p>
+30.07.20 | 28.08.20 | 19.09.20 | 05.10.20<br>
+24.10.20 | 11.11.20 | 02.12.20 | 25.12.20<br>
+15.01.21 | 08.02.21 | 08.03.21 | 27.03.21<br>
+28.04.21 | 25.05.21 | 28.06.21 | 27.07.21<br>
+15.08.21 | 12.09.21 | 20.12.21 | 04.02.22<br>
+07.06.22 | 22.06.23 | 22.06.23 | 22.06.23<br>
+22.06.23 | 22.06.23 | 21.01.24</p>
 
 <p>B_happy420<br>
-30.7.20|22.06.23</p>
+30.7.20 | 22.06.23</p>
 
 <p>DSIS_dark<br>
 31.7.20</p>
 
 <p>Shastow<br>
-05.8.20|07.09.20|30.09.20|23.11.20</p>
+05.8.20 | 07.09.20 | 30.09.20 | 23.11.20</p>
 
 <p>Cat_Bacon_624<br>
-16.08.20|02.10.20</p>
+16.08.20 | 02.10.20</p>
 
 <p>SilxxUK<br>
 23.08.20</p>
@@ -87,17 +87,18 @@ Only 6 have conquered NIGHTMARE<br>
 10.09.20</p>
 
 <p>skulduggery00<br>
-12.09.20|10.08.23</p>
+12.09.20 | 10.08.23</p>
 
 <p>mataja_777<br>
 12.09.20</p>
 
 <p>JUSTCLAlRE<br>
-14.09.20|16.11.20|16.11.20|10.02.21
-11.07.21|08.12.21|06.08.22</p>
+14.09.20 | 16.11.20 | 16.11.20 | 10.02.21
+11.07.21 | 08.12.21 | 06.08.22</p>
 
 <p>RetroZoon<br>
-25.09.20|27.05.21|08.01.21|20.01.22|15.02.23|09.05.25</p>
+25.09.20 | 27.05.21 | 08.01.21 | 20.01.22 | 15.02.23<br>
+09.05.25</p>
 
 <p>oumarch110<br>
 29.09.20</p>
@@ -109,19 +110,19 @@ Only 6 have conquered NIGHTMARE<br>
 03.10.20</p>
 
 <p>drollcow<br>
-07.10.20|17.12.20|03.03.21|08.05.21
+07.10.20 | 17.12.20 | 03.03.21 | 08.05.21
 01.09.21</p>
 
 <p>schakken<br>
-07.10.20|25.01.21|28.05.21|22.06.23</p>
+07.10.20 | 25.01.21 | 28.05.21 | 22.06.23</p>
 
 <p>DarkStarWolfy <br>
-09.10.20|14.12.20|31.03.21|15.08.21</p>
+09.10.20 | 14.12.20 | 31.03.21 | 15.08.21</p>
 
 <p>blunkadunk<br>
-10.10.20|16.12.20|24.02.21|01.04.21
-18.05.21|15.07.21|14.08.21|23.09.21
-04.02.22|22.06.23|08.02.25|07.03.25
+10.10.20 | 16.12.20 | 24.02.21 | 01.04.21<br>
+18.05.21 | 15.07.21 | 14.08.21 | 23.09.21<br>
+04.02.22 | 22.06.23 | 08.02.25 | 07.03.25<br>
 02.06.25</p>
 
 <p>BentyBird<br>
@@ -131,7 +132,8 @@ Only 6 have conquered NIGHTMARE<br>
 18.10.20</p>
 
 <p>Tejey94<br>
-18.10.20|30.12.20|29.03.21|25.09.21|25.07.22|06.03.23|01.03.25</p>
+18.10.20 | 30.12.20 | 29.03.21 | 25.09.21<br>
+25.07.22 | 06.03.23 | 01.03.25</p>
 
 <p>MekaCandyKS<br>
 01.11.20</p>
@@ -149,34 +151,35 @@ Only 6 have conquered NIGHTMARE<br>
 13.11.20</p>
 
 <p>doggyfood<br>
-20.11.20|14.07.21|05.08.22|14.03.24</p>
+20.11.20 | 14.07.21 | 05.08.22 | 14.03.24</p>
 
 <p>jcarmichael1966<br>
-23.11.20|18.02.21|11.06.21|22.01.22</p>
+23.11.20 | 18.02.21 | 11.06.21 | 22.01.22</p>
 
 <p>Hawkeye4124<br>
-23.11.20|07.06.22|07.06.22</p>
+23.11.20 | 07.06.22 | 07.06.22</p>
 
 <p>miss_eloisa<br>
-27.11.20|22.06.23</p>
+27.11.20 | 22.06.23</p>
 
 <p>justfeezy<br>
-10.12.20|13.03.25</p>
+10.12.20 | 13.03.25</p>
 
 <p>stevenxkalel13<br>
 11.12.20</p>
 
 <p>mordechai666<br>
-25.12.20|11.06.21|03.09.21|13.08.22</p>
+25.12.20 | 11.06.21 | 03.09.21 | 13.08.22</p>
 
 <p>KurTech<br>
-29.12.20|01.04.21|05.08.21|07.06.22|30.01.24|13.03.25</p>
+29.12.20 | 01.04.21 | 05.08.21 | 07.06.22<br>
+30.01.24|13.03.25</p>
 
 <p>Lawgiver061105<br>
-30.12.20|07.06.22|07.06.22|14.02.23</p>
+30.12.20 | 07.06.22 | 07.06.22 | 14.02.23</p>
 
 <p>reggie_84<br>
-01.01.21|05.03.21|05.08.21</p>
+01.01.21 | 05.03.21 | 05.08.21</p>
 
 <p>JackDaniels54<br>
 05.01.21</p>
@@ -185,37 +188,37 @@ Only 6 have conquered NIGHTMARE<br>
 08.01.21</p>
 
 <p>MrsSpontaneous<br>
-08.01.21|24.10.21</p>
+08.01.21 | 24.10.21</p>
 
 <p>reality_v<br>
-11.01.21|29.06.21|21.01.22</p>
+11.01.21 | 29.06.21 | 21.01.22</p>
 
 <p>Laney1986sam<br>
-21.01.21|28.05.21|23.09.21|05.02.24</p>
+21.01.21 | 28.05.21 | 23.09.21 | 05.02.24</p>
 
 <p>bigbuddha23x<br>
-22.01.21|05.08.21 </p>
+22.01.21 | 05.08.21 </p>
 
 <p>8t8iroc<br>
 27.01.21</p>
 
 <p>KenWho_<br>
-08.02.21|09.02.21|15.08.22</p>
+08.02.21 | 09.02.21 | 15.08.22</p>
 
 <p>Becaruu<br>
-10.02.21|20.08.22</p>
+10.02.21 | 20.08.22</p>
 
 <p>LeahJane_<br>
 11.02.21</p>
 
 <p>JimmehDanger<br>
-01.03.21|25.08.21|14.06.22|26.10.22</p>
+01.03.21 | 25.08.21 | 14.06.22 | 26.10.22</p>
 
 <p>MultiverseNomad<br>
-08.03.21|15.11.21</p>
+08.03.21 | 15.11.21</p>
 
 <p>go4itpats12<br>
-09.03.21|20.01.24</p>
+09.03.21 | 20.01.24</p>
 
 <p>Hunkstaban<br>
 05.04.21</p>
@@ -224,7 +227,7 @@ Only 6 have conquered NIGHTMARE<br>
 20.04.21</p>
 
 <p>DeafDumbDrunk<br>
-28.04.21|06.07.22</p>
+28.04.21 | 06.07.22</p>
 
 <p>QueDee<br>
 03.05.21</p>
@@ -254,40 +257,41 @@ Only 6 have conquered NIGHTMARE<br>
 26.08.21</p>
 
 <p>ellipsisRIP<br>
-28.08.21|12.01.22|07.06.22</p>
+28.08.21 | 12.01.22 | 07.06.22</p>
 
 <p>KoldFire7<br>
-08.09.21|05.07.22</p>
+08.09.21 | 05.07.22</p>
 
 <p>jonny_longwood<br>
 27.09.21</p>
 
 <p>Narusko<br>
-24.10.21|14.09.22|14.09.22|14.09.22|22.06.23</p>
+24.10.21 | 14.09.22 | 14.09.22 | 14.09.22<br>
+22.06.23</p>
 
 <p>snappierriver58<br>
-10.11.21|19.06.22|24.06.22|03.08.23</p>
+10.11.21 | 19.06.22 | 24.06.22 | 03.08.23</p>
 
 <p>Pongonator<br>
 19.12.21</p>
 
 <p>YellowSnoflake<br>
-21.12.21|21.12.21</p>
+21.12.21 | 21.12.21</p>
 
 <p>madison9<br>
 12.01.22</p>
 
 <p>one1shot1wonder<br>
-14.01.22|05.03.24</p>
+14.01.22 | 05.03.24</p>
 
 <p>TruckerMarty<br>
-21.01.22|21.01.22</p>
+21.01.22 | 21.01.22</p>
 
 <p>lusterr72<br>
 04.02.22</p>
 
 <p>daveyd182<br>
-09.03.22|03.06.25</p>
+09.03.22 | 03.06.25</p>
 
 <p>eXilePro<br>
 01.06.22</p>
@@ -299,7 +303,7 @@ Only 6 have conquered NIGHTMARE<br>
 30.06.22</p>
 
 <p>ZoMohs<br>
-05.07.22|08.02.25</p>
+05.07.22 | 08.02.25</p>
 
 <p>Prepperian<br>
 01.08.22</p>
