--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@ Hitting GODLIKE is almost impossible, but if you do, epicness is coming.<br>
 
 All dates shown are in British Date Format</p>
 
-|| GODLIKE || (9,999,999 sparks)<br>
+<p>|| GODLIKE || (9,999,999 sparks)<br>
 
-Nobody has achieved GODLIKE<br>
+Nobody has achieved GODLIKE</p>
 
-|| NIGHTMARE || (999,999 sparks)<br>
+<p>|| NIGHTMARE || (999,999 sparks)<br>
 
-Only 6 have conquered NIGHTMARE<br>
+Only 6 have conquered NIGHTMARE</p>
 
 <p>itWazzMe<br>
 28.04.21</p>
